# rupy-engine

./: .gitignore  LICENSE  README.md  run_py.sh
ru/: Cargo.toml  build.rs  build.txt  config.toml  engine.rs  lib.rs  main.rs  run.bat  run.sh
ru/src/: application.rs  constants.rs  error.rs  input.rs  lib.rs  logger.rs  main.rs  window.rs
ru/src/app/: app.rs  context.rs  flags.rs  gpu.rs  handler.rs  mod.rs  renderer.rs  rupy.rs  state.rs
ru/src/application/: app.rs  bus.rs  event.rs  handler.rs  initialize.rs  mod.rs  resources.rs  rupy.rs  state.rs  surface.rs  window.rs  worker.rs
ru/src/assets/res/: cube.mtl
ru/src/assets/shaders/: equirectangular.wgsl  light.wgsl  normal.wgsl
ru/src/audio/: mod.rs
ru/src/camera/: controller.rs  controls.rs  entity.rs  frustum.rs  handler.rs  mod.rs  perspective.rs  projection.rs
ru/src/config/: cfg.rs  gpu.rs  mod.rs  screen.rs  settings.rs
ru/src/console/: mod.rs
ru/src/core/: application.rs  cache.rs  cfg.rs  constants.rs  error.rs  files.rs  geometry.rs  input.rs  instance.rs  layout.rs  log.rs  logger.rs  menu.rs  metrics.rs  mod.rs  render.rs  spatial.rs  surface.rs  time.rs  views.rs  worker.rs
ru/src/ecs/: buffer.rs  entity.rs  material.rs  materials.rs  mesh.rs  mod.rs  model.rs  pipelines.rs  resources.rs  scene.rs  shaders.rs  storage.rs  textures.rs  traits.rs  vertex.rs  world.rs
ru/src/error/: mod.rs
ru/src/events/: mod.rs  proxy.rs
ru/src/files/: mod.rs
ru/src/geometry/: cube.rs  hexagon.rs  mod.rs  rectangle.rs  spatial.rs  sphere.rs  traits.rs  triangle.rs
ru/src/gpu/: binding.rs  buffer.rs  context.rs  global.rs  glyphon.rs  mod.rs  sampler.rs  uniform.rs
ru/src/graphics/: bind_group.rs  binding.rs  buffer.rs  context.rs  data.rs  depth.rs  global.rs  glyphon.rs  gpu.rs  mod.rs  model.rs  sampler.rs  vertex.rs
ru/src/input/: action.rs  binding.rs  handler.rs  manager.rs  mod.rs  traits.rs
ru/src/material/: color.rs  manager.rs  material_manager.rs  mod.rs  vertex.rs
ru/src/math/: mod.rs  spatial.rs  trigonometry.rs  vector.rs
ru/src/menu/: item.rs  menu.rs  mod.rs  wrapper.rs
ru/src/model/: mod.rs  primitive.rs  surface.rs  uniforms.rs  window.rs
ru/src/object/: buffer.rs  color.rs  cube.rs  hexagon.rs  manager.rs  mod.rs  object.rs  rectangle.rs  shape.rs  sphere.rs  traits.rs  triangle.rs  vertex.rs
ru/src/pipeline/: builder.rs  cache.rs  factory.rs  key.rs  manager.rs  mod.rs  setup.rs  state.rs
ru/src/render/: command.rs  context.rs  layout.rs  mod.rs  pass.rs  pipeline.rs  pipeline_manager.rs  renderer.rs  surface.rs  texture.rs  traits.rs  window.rs
ru/src/rendering/: command.rs  gpu.rs  mod.rs  pipeline.rs  queue.rs  render_command.rs
ru/src/scene/: description.rs  manager.rs  mod.rs  model.rs  scene.rs  scene_manager.rs
ru/src/shader/: library.rs  loader.rs  manager.rs  mod.rs  module.rs  reflection.rs  shader.rs  shape.wgsl  source.rs  texture.wgsl
ru/src/shape/: cube.rs  hexagon.rs  mod.rs  rectangle.rs  sphere.rs  triangle.rs
ru/src/system/: console.rs  glyphon.rs  menu.rs  mod.rs  plane.rs
ru/src/text/: glyphon_manager.rs  mod.rs
ru/src/texture/: config.rs  factory.rs  file.rs  library.rs  loader.rs  manager.rs  mod.rs  sampler.rs
ru/src/traits/: buffers.rs  bus.rs  mod.rs  rendering.rs
ru/src/ui/: console.rs  layout.rs  menu.rs  mod.rs
ru/src/utilities/: constant.rs  debug.rs  frame.rs  helpers.rs  logger.rs  metrics.rs  mod.rs
ru/static/shader/: fragment.wgsl  outline.fragment.wgsl  outline.vertex.wgsl  transparent.fragment.wgsl  vertex.wgsl
ru/static/shaders/: 2d_lit_fragment.wgsl  2d_lit_vertex.wgsl  2d_unlit_fragment.wgsl  2d_unlit_vertex.wgsl  frustum_fragment.wgsl  frustum_vertex.wgsl  gui.wgsl  guifragment.wgsl  lit_fragment.wgsl  lit_vertex.wgsl  plane.frag.wgsl  plane.vert.wgsl  shape.wgsl  text_fragment.wgsl  text_vertex.wgsl  textured.frag.wgsl  textured.vert.wgsl  unlit.frag.wgsl  unlit.vert.wgsl  unlit_fragment.wgsl  unlit_vertex.wgsl  vertex.wgsl
ru/tests/: gpu.rs  math.rs
(+232 files in other folders)
