[package]
name = "rupy"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
wgpu = "22.0.0"
winit = { version = "0.30.5", features = ["rwh_06"] }

log = { version = "0.4.22", optional = true }
env_logger = { version = "0.11.5", optional = true }
bytemuck = { version = "1.2.0-alpha.1", features = ["derive"] }
rand = "0.8.5"
glyphon = "0.6.0"
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_derive = { version = "1.0.210", optional = true }
image = { version = "0.25.2" } 
vecmath = "1.0.0"
quaternion = "1.0.0"
crossbeam = "0.8.4"
naga = { version = "22.1.0", features = ["wgsl-in", "wgsl-out", "arbitrary", "deserialize", "compact"] }
egui = "0.29.1"
egui-winit = "0.29.1"
egui-wgpu = "0.29.1"
cfg-if = "1.0.0"
once_cell = "1.20.2"
bitflags = "2.6.0"
itertools = "0.13.0"
nalgebra = "0.33.2"

[dev-dependencies]
mockall = "0.13.0"

[features]
default = ["logging", "serialize"]
logging = ["env_logger", "log"]
serialize = ["serde", "serde_derive"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/bin/engine.rs"

[[bin]]
name = "resize_images"
path = "src/bin/resize_image.rs"
