[package]
name = "rupy"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
pollster = "0.3.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
wgpu = { version =  "22.0.0" , features = ["serde"] }
winit = { version = "0.30.5", features = ["rwh_06", "serde"] }

log = { version = "0.4.22", optional = true }
env_logger = { version = "0.11.5", optional = true }
bytemuck = { version = "1.2.0-alpha.1", features = ["derive"] }
rand = "0.8.5"
glyphon = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = { version = "1.0.210" }
image = { version = "0.25.2" } 
vecmath = "1.0.0"
quaternion = "1.0.0"
crossbeam = "0.8.4"
naga = { version = "22.1.0", features = ["wgsl-in", "wgsl-out", "arbitrary", "deserialize", "compact"] }


cfg-if = "1.0.0"
once_cell = "1.20.2"
bitflags = "2.6.0"
itertools = "0.13.0"
nalgebra = "0.33.2"
toml = "0.8.19"
serde_yaml = "0.9.34"


[build-dependencies]
toml = "0.8.19"

[dev-dependencies]
mockall = "0.13.0"

[features]
default = ["logging"]
logging = ["env_logger", "log"]

[lib]
path = "src/lib.rs"


[[bin]]
name = "resize_images"
path = "src/bin/resize_image.rs"
